# PLDL

./: .env.example  .gitignore  CLAUDE.md  README.md  TAURI.md  index.html  package-lock.json  package.json  recover_playlist_titles.py  server.js
lib/: archive.js  bindeps.js  playlist.js  recover.js  timeline.js  ytdata.js
scripts/: build-sidecar.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
