[package]
name = "pldl"
version = "0.1.0"
description = "PLDL — PlayList DownLoader"
authors = ["hiretyler"]
edition = "2021"
rust-version = "1.77.2"

# The library is what Tauri's mobile/desktop entry points call into.
# Even for a desktop-only app this split is the idiomatic v2 layout.
[lib]
name = "pldl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
